--- a/styles/style.css
+++ b/styles/style.css
@@ -3,12 +3,13 @@
     padding: 0;
     border: 0;
     box-sizing: border-box;
+
   }
   
   body {
     font-family: 'Raleway', sans-serif;
     color: var(--baby-powder);
-    background-color: var(--oxford-blue);
+    background-color: var(--argentinian-blue);
   }
   
   :root {
@@ -29,7 +30,7 @@
 
 /* Side Navigation */
 .side-nav {
-  grid-row: 1 / 4;
+  grid-row: 1 / 5;
   background-color: var(--penn-blue);
   color: var(--baby-powder);
   padding: 20px;
@@ -53,16 +54,24 @@
 /* Header */
 .header {
   grid-column: 2 / 3;
-  background-color: var(--argentinian-blue);
+  background-color: var(--oxford-blue);
   padding: 20px;
-  text-align: center;
-  font-family: 'Raleway', sans-serif;
-  color: var(--oxford-blue);
+  display: flex;
+  justify-content: center;
+}
+.logo {
+  height: 150px;
+  border: 2px solid var(--mauveine);
+  border-radius: 4px;
+
+}
+.banner {
+  height: 175px;
 }
 /* Footer */
 .footer {
   grid-column: 2 / 3;
-  background-color: var(--argentinian-blue);
+  background-color: var(--oxford-blue);
   padding: 20px;
   text-align: center;
   color: var(--baby-powder);
@@ -161,7 +170,7 @@
   }
   
   #entries-section {
-    background-color: #006d77;
+    background-color: var(--oxford-blue);
     color: #fff;
     padding: 30px 25px;
     border-radius: 8px;
@@ -189,17 +198,14 @@
     opacity: 1;
   }
   
-  /* Reusable Components 
-  -----------------------------------------------------------------------------*/
-  
-  /* Buttons */
   .primary-button {
     font-size: 115%;
     padding: 10px 40px;
     border-radius: 4px;
-    background-color: #006d77;
+    background-color: var(--mauveine);
+    border: 1px solid #6b026b;
     color: #fff;
-    transition: opacity 0.2s;
+    transition: opacity 0.1s ease;
   }
   
   .primary-button:hover {
@@ -208,15 +214,18 @@
   }
   
   .display-entry-button {
-    display: block;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px; 
     width: 100%;
     height: 80px;
-    margin: 15px 0px 10px 0px;
+    margin: 15px 0 10px 0;
     border-radius: 4px;
     background-color: #fafafa;
     opacity: 0.9;
-    transition: opacity 0.2s;
-    font-size: 100%;
+    transition: opacity 0.2s ease;
+    font-size: 1rem;
     font-weight: 500;
     color: #393e46;
   }
@@ -227,16 +236,12 @@
   }
   
   .delete-entry-button {
-    position: relative;
-    top: -68px;
-    right: 20px;
-    padding: 10px;
-    background-color: #e94661;
-    color: #fff;
-    border-radius: 4px;
-    float: right;
-    opacity: 0.8;
-    transition: opacity 0.2s;
+  padding: 10px;
+  background-color: var(--mauveine);
+  color: #fff;
+  border-radius: 4px;
+  opacity: 0.8;
+  transition: opacity 0.2s ease;
   }
   
   .delete-entry-button:hover {
@@ -244,22 +249,18 @@
     opacity: 1;
   }
   
-  /* Text */
   .underline {
     display: inline-block;
     border-bottom: 5px solid #006d77;
     padding-bottom: 10px;
   }
-  
-  /* Floating and clearing */
+
   .clear {
     clear: both;
   }
-  
   .right {
     float: right;
   }
-  
   .left {
     float: left;
   }
